# money-flow

./: .dockerignore  .gitignore  DEV_GUIDE.md  Makefile  README.md
backend/: .pre-commit-config.yaml  pyproject.toml  ruff.toml
backend/docs/: v1.yaml
backend/src/apps/reference/: admin.py  apps.py
backend/src/apps/reference/enums/: __init__.py  base.py  category.py  status.py  subcategory.py  transaction_type.py
backend/src/apps/reference/migrations/: 0001_initial.py  0002_alter_category_name_alter_status_name_and_more.py  0003_remove_category_valid_category_name_and_more.py  0004_remove_category_valid_category_name_and_more.py
backend/src/apps/reference/models/: __init__.py  category.py  status.py  subcategory.py  transaction_type.py
backend/src/apps/reference/serializers/: category.py  status.py  subcategory.py  transaction_type.py
backend/src/apps/reference/services/: category.py  status.py  subcategory.py  transaction_type.py
backend/src/apps/reference/tests/: __init__.py  factories.py
backend/src/apps/reference/urls/: __init__.py  base.py  category.py  status.py  subcategories.py  transaction_type.py
backend/src/apps/reference/views/: category.py  status.py  (+2 more)
backend/src/apps/transactions/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
backend/src/apps/users/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
backend/src/config/: asgi.py  urls.py  wsgi.py  yasg.py
backend/src/config/settings/: __init__.py  auth.py  base.py  database.py  docs.py  logging.py  security.py
backend/src/config/urls/: v1.py
(+59 files in other folders)
