[project]
name = "money-flow"
version = "0.1.0"
description = ""
authors = [{ name = "teenxsky", email = "kutorgin2002@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["django (>=5.2.2,<6.0.0)", "psycopg2-binary (>=2.9.10,<3.0.0)"]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
ruff = "^0.11.13"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
venvPath = "."
venv = ".venv"
